--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, a?
     </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, excepturi! Obcaecati amet quisquam hic fugit natus aperiam! Labore, quia rerum?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, a?
+    </p>
     
     <footer>
         <p>Copyright &copy; 2023. Made with 💕 by Shubham Sonkar</p>
